# processes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mktests
src/: CMakeLists.txt  farapi.cpp  farapi.h  farconnect.cpp  fardialog.cpp  fardialog.h  farpanel.cpp  farpanel.h  lng.h  plugin.cpp  plugin.h  plugincfg.cpp  plugincfg.h  procpanel.cpp  procpanel.h  procplugin.cpp  procplugin.h  progress.cpp  progress.h
src/common/: errname.c  errname.h  log.c  log.h  procutil.c  procutil.h  sizestr.c  sizestr.h  utf8util.c  utf8util.h
src/configs/plug/: ProcBel.lng  ProcEng.hlf  ProcEng.lng  ProcRus.hlf  ProcRus.lng
src/process/: process.cpp  process.h  processes.cpp  processes.h  sockets.cpp  sockets.h
